tests/parser/tests/cases/should_fail/double_comma_in_list_literal/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:9
1 |   k := [1,,];
  |           ^ here
  = note: expected an expression, however received a `,`.
